# PORR-SEQ

./: CMakeLists.txt  main.cpp  runConf
src/: Interval.cpp  Interval.h  Solver.cpp  Solver.h  derivative.cpp  derivative.h
